# sqlite3-amalgamation-cmake

./: CMakeLists.txt
test/: CMakeLists.txt
